--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -19,8 +19,7 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background: coral;
-	//background-color: var(--primary-color);
+	background-color: var(--primary-color);
 	// background: linear-gradient(
 	// 	180deg,
 	// 	var(--primary-color) 0%,
